header component added and scrollbar fix

--- a/frontend/movie-gold-v1/src/components/hero/Hero.css
+++ b/frontend/movie-gold-v1/src/components/hero/Hero.css
@@ -1,37 +1,42 @@
-.movie-carousel-container{
-    width: 100vw;
+.movie-carousel-container {
+    width: 100%;
     background-color: black;
 }
-.movie-poster{
+
+.movie-poster {
     height: 300px;
     border: 1px solid gold;
     border-radius: 10px;
     overflow: hidden;
 }
-.movie-poster > img{
+
+.movie-poster > img {
     height: 100%;
     width: 100%;
-
 }
-.movie-card-container{
+
+.movie-card-container {
     height: 550px;
     background-color: black;
 }
-.movie-card{
+
+.movie-card {
     background-repeat: no-repeat;
-    width:100%;
+    width: 100%;
     height: 100%;
     background-size: cover;
     background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1)), var(--img);
 }
-.movie-detail{
+
+.movie-detail {
     position: absolute;
-    top:200px;
+    top: 200px;
     display: flex;
     justify-content: space-evenly;
-    width:100%;
+    width: 100%;
 }
-.movie-title{
+
+.movie-title {
     color:white;
     display: flex;
     align-items: center;
